feat: implement grades, more student/class data
