# models/class.go
@@ -17,6 +17,11 @@ type Class struct {
 	// Description is the human-readable description of what the class teaches.
 	Description *string `json:"description"`
 
+	StudentIds []string `json:"studentIds"`
+
+	StartDate time.Time `json:"startDate"`
+	EndDate   time.Time `json:"endDate"`
+
 	BaseMetadata
 }
 
@@ -26,6 +31,9 @@ func (c *Class) AsApiClass() api.Class {
 		Name:        c.Name,
 		DisplayName: c.DisplayName,
 		Description: *c.Description,
+		StudentIds:  &c.StudentIds,
+		StartDate:   c.StartDate.Format(time.RFC3339),
+		EndDate:     c.EndDate.Format(time.RFC3339),
 		CreatedAt:   c.CreatedAt.Format(time.RFC3339),
 		UpdatedAt:   c.UpdatedAt.Format(time.RFC3339),
 	}
