# models/student.go
@@ -9,21 +9,40 @@ import (
 type Grade struct {
   BaseMetadata
 
+  ClassId string `json:"classId"`
+
   // StudentId is the ID of the student this Grade applies to.
-  StudentId string `json:"student"`
+  StudentId string `json:"studentId"`
 
   // Value is the value of the Grade.
   Value int `json:"value"`
 }
 
+func (s *Grade) AsApiGrade() api.Grade {
+  return api.Grade{
+    Id: s.BaseMetadata.Id,
+    CreatedAt: s.BaseMetadata.CreatedAt.Format(time.RFC3339),
+    UpdatedAt: s.BaseMetadata.UpdatedAt.Format(time.RFC3339),
+    StudentId: s.StudentId,
+    Value: s.Value,
+  }
+}
+
+func GradesAsApiGradeList(students []Grade) api.GradeList {
+	studentList := api.GradeList{}
+	for _, student := range students {
+		studentList = append(studentList, student.AsApiGrade())
+	}
+	return studentList
+}
+
 type Student struct {
   BaseMetadata
 
-  // Id is the CUID of the student.
-  Id string `json:"id"`
-
   // FullName is the student's full legal name.
   FullName string `json:"fullName"`
+
+  ClassId string `json:"classId"`
 }
 
 func (s *Student) AsApiStudent() api.Student {
@@ -32,6 +51,7 @@ func (s *Student) AsApiStudent() api.Student {
     CreatedAt: s.BaseMetadata.CreatedAt.Format(time.RFC3339),
     UpdatedAt: s.BaseMetadata.UpdatedAt.Format(time.RFC3339),
     FullName: s.FullName,
+    ClassId: &s.ClassId,
   }
 }
 
